					Changed the 'CompletedByUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'ClaimedDate' column from a VARCHAR type to a CHAR type.
					Changed the 'CompletionDate' column from a VARCHAR type to a CHAR type.
	3.1.8	8/1/2014
				Fixed trying to find a player even if the username is invalid.
	3.1.9	8/13/2014
				Increased efficiency of getting players.
				New Configuration Option:
					general.matchPartialOfflineUsernames - If the plugin should attempt to match a partial username to an offline player.
	3.2		8/19/2014
				Features:
					An alert will be sent when a reported player from an unfinished report logs in.
					Added a statistics system.
					Added plugin metrics, using MCStats.
				Changes:
					A message of how many reports were deleted is displayed when deleting groups of reports.
					Database:
						Created a PlayerStats table.
						Created a ModStats table.
				New Configuration Option:
					plugin.statistics.opt-out
				New Commands:
					/report statistic/stat list
					/report statistic/stat <Player Name> <Statistic>
					/report statistic/stat <Player Name> all
					/report statistic/stat <Player Name> all mod|player
				New Permission Nodes:
					reporter.alerts.onLogin.reportedPlayerLogin
					reporter.statistic.list
					reporter.statistic.read.mod
					reporter.statistic.read.player
	3.2.0.1	8/26/2014
				Version bump for BukkitDev re-submission.
	3.2.1
				Fixes:
					Fixed the locale being initialized twice while using synchronous initialization.
					Fixed metrics submitting locale information before the locale is initialized.
					Fixed metrics submitting locale language as English, even if a different language is being used.
					Fixed metrics submitting the locale version as 10, even if a different version is being used.
					Fixed an error when using the command '/report list claimed priority' with the console.
					Fixed an error when using the command '/report request *'.